# introduction-k8s

./: .gitignore  Gemfile  README.md  _config.yml  index.md
.github/workflows/: pages.yml
docs/01-introduction/: hello-k8s.md  index.md  k8s.md  sample-app.md  setup-kubeadm-overview.md  setup-minikube.md  setup.md  vm-docker-k8s.md
docs/02-resources/: architecture.md  deployment.md  index.md  kubectl.md  label.md  namespace.md  pod.md  replicaset.md
docs/03-workloads/: daemonset.md  index.md  init-sidecar.md  job.md  statefulset.md
docs/04-networking/: dns.md  gateway-api.md  index.md  ingress.md  networkpolicy.md  service.md
docs/05-storage/: index.md  pv-pvc.md  stateful-storage.md  storageclass.md  volume.md
docs/06-config/: configmap.md  index.md  patterns.md  secret.md
docs/07-production/: autoscaling.md  helm.md  index.md  kubeadm.md  kustomize.md  probe.md  resources.md  scheduling.md
docs/08-cicd-gitops/: argocd.md  index.md  pipeline.md  progressive-delivery.md
docs/09-observability/: index.md  logging.md  metrics.md  slo.md  tracing.md
docs/10-security/: image.md  index.md  pss.md  rbac.md  secret-management.md  serviceaccount.md
docs/11-sre/: capacity.md  dr.md  incident.md  index.md  postmortem.md  upgrade.md
docs/12-advanced/: cost.md  index.md  multi-cluster.md  operator.md  service-mesh.md  troubleshooting.md
docs/99-appendix/: cheatsheet.md  index.md  production-checklist.md  references.md
sample-app/: README.md
sample-app/api/: Dockerfile  pyproject.toml
sample-app/api/app/: db.py  main.py
sample-app/frontend/: Dockerfile  (+1 more)
(+37 files in other folders)
