[project]
name = "todo-api"
version = "0.1.0"
description = "Sample TODO API for introduction-k8s"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "redis>=5.0",
  "prometheus-client>=0.21",
  "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
